--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <button onclick="">Donate now!</button>
+    <img src="images/hungry cat.png" alt="hungry cat" />
+    <img src="images/hungry cat2.png" alt="also hungry cat" />
+    <img src="images/fed cat.png" alt="not a hungry cat" />
   </body>
 </html>
