--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Gimme Money</title>
   </head>
   <body>
-    <button onclick="">Donate now!</button>
+    <button onclick="" id="donate">Donate now!</button>
+    <h1>The Hungry Cat Society</h1>
+    <p></p>
     <img src="images/hungry cat.png" alt="hungry cat" />
     <img src="images/hungry cat2.png" alt="also hungry cat" />
     <img src="images/fed cat.png" alt="not a hungry cat" />
