--- a/index.html
+++ b/index.html
@@ -5,13 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gimme Money</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <button onclick="" id="donate">Donate now!</button>
     <h1>The Hungry Cat Society</h1>
-    <p></p>
-    <img src="images/hungry cat.png" alt="hungry cat" />
-    <img src="images/hungry cat2.png" alt="also hungry cat" />
-    <img src="images/fed cat.png" alt="not a hungry cat" />
+    <div class="container">
+      <div class="image">
+        <img src="images/hungry cat.png" alt="hungry cat" />
+      </div>
+      <div class="text">
+        <p>
+          If you know of a cat that looks like the one in the picture, than it
+          is hungry and might be entitled to financial compensation. Call now at
+          1-800-cat-food or click the donate button and feed a hungry cat today.
+        </p>
+      </div>
+    </div>
+    <div class="container">
+      <div class="image">
+        <img src="images/hungry cat2.png" alt="also hungry cat" />
+      </div>
+      <div class="text">
+        <p>
+          If cats in your neighborhood are glaring at you or your loved ones you
+          might be in danger of minor inconveniences, than you might need to
+          become a volunteer because they have marked you as a unkind soul and
+          the only way to be redeemed is to be active in the feeding of them.
+        </p>
+      </div>
+    </div>
+    <div class="container">
+      <div class="image">
+        <img src="images/fed cat.png" alt="not a hungry cat" />
+      </div>
+      <div class="text">
+        <p>
+          For every dollar you donate we feed one cat and you can make The
+          Hungry Cat Society and the world a better place.
+        </p>
+      </div>
+    </div>
+
+    <p align="right" class="button">
+      <a href="https://www.youtube.com/watch?v=W6rmYlrU4lI" target="_blank">
+        <button>Become a volunteer today!</button>
+      </a>
+      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+        <button onclick="">Donate now!</button>
+      </a>
+    </p>
   </body>
 </html>
