--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       <div class="text">
         <p>
-          If you know of a cat that looks like the one in the picture, than it
+          If you know of a cat that looks like the one in the picture, then it
           is hungry and might be entitled to financial compensation. Call now at
           1-800-cat-food or click the donate button and feed a hungry cat today.
         </p>
@@ -28,7 +28,7 @@
       <div class="text">
         <p>
           If cats in your neighborhood are glaring at you or your loved ones you
-          might be in danger of minor inconveniences, than you might need to
+          might be in danger of minor inconveniences, then you might need to
           become a volunteer because they have marked you as a unkind soul and
           the only way to be redeemed is to be active in the feeding of them.
         </p>
