--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Hungry Cat Society</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="images/yarn_ball.png" />
   </head>
   <body>
     <h1>The Hungry Cat Society</h1>
